networkpolicies-backup.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-external-to-nodeports","namespace":"default"},"spec":{"ingress":[{"from":[],"ports":[{"port":30080,"protocol":"TCP"},{"port":30443,"protocol":"TCP"}]}],"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2025-11-28T21:13:50Z"
    generation: 1
    name: allow-external-to-nodeports
    namespace: default
    resourceVersion: "19958"
    uid: f4accbb9-5736-4a87-9d0b-2d7ff8330334
  spec:
    ingress:
    - ports:
      - port: 30080
        protocol: TCP
      - port: 30443
        protocol: TCP
    podSelector: {}
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-go-api-egress","namespace":"default"},"spec":{"egress":[{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}]},{"ports":[{"port":5432,"protocol":"TCP"}],"to":[{"podSelector":{"matchLabels":{"app":"postgres"}}}]},{"ports":[{"port":6379,"protocol":"TCP"}],"to":[{"podSelector":{"matchLabels":{"app":"redis"}}}]},{"ports":[{"port":80,"protocol":"TCP"},{"port":443,"protocol":"T [...]
    creationTimestamp: "2025-11-28T18:16:29Z"
    generation: 1
    name: allow-go-api-egress
    namespace: default
    resourceVersion: "4838"
    uid: e606443e-3fb3-480f-89d5-db621c5608aa
  spec:
    egress:
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - ports:
      - port: 5432
        protocol: TCP
      to:
      - podSelector:
          matchLabels:
            app: postgres
    - ports:
      - port: 6379
        protocol: TCP
      to:
      - podSelector:
          matchLabels:
            app: redis
    - ports:
      - port: 80
        protocol: TCP
      - port: 443
        protocol: TCP
      to:
      - ipBlock:
          cidr: 0.0.0.0/0
    podSelector:
      matchLabels:
        app: go-api
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-go-api-ingress","namespace":"default"},"spec":{"ingress":[{"from":[{"podSelector":{}}],"ports":[{"port":4000,"protocol":"TCP"}]},{"from":[{"ipBlock":{"cidr":"0.0.0.0/0"}}],"ports":[{"port":4000,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"go-api"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2025-11-28T18:16:29Z"
    generation: 1
    name: allow-go-api-ingress
    namespace: default
    resourceVersion: "4841"
    uid: c7b94287-fb28-4b87-84ba-eb280984ec78
  spec:
    ingress:
    - from:
      - podSelector: {}
      ports:
      - port: 4000
        protocol: TCP
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 4000
        protocol: TCP
    podSelector:
      matchLabels:
        app: go-api
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-internal-traffic","namespace":"default"},"spec":{"egress":[{"to":[{"podSelector":{}}]}],"ingress":[{"from":[{"podSelector":{}}]}],"podSelector":{},"policyTypes":["Ingress","Egress"]}}
    creationTimestamp: "2025-11-29T10:55:06Z"
    generation: 1
    name: allow-internal-traffic
    namespace: default
    resourceVersion: "85170"
    uid: 365ad677-2178-40bd-9d7f-4c2e631427e4
  spec:
    egress:
    - to:
      - podSelector: {}
    ingress:
    - from:
      - podSelector: {}
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-postgres-ingress","namespace":"default"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"go-api"}}}],"ports":[{"port":5432,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"postgres"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2025-11-28T18:16:29Z"
    generation: 1
    name: allow-postgres-ingress
    namespace: default
    resourceVersion: "4839"
    uid: 03aa4c7b-86a7-40c0-9659-71a9d4db6551
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: go-api
      ports:
      - port: 5432
        protocol: TCP
    podSelector:
      matchLabels:
        app: postgres
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-redis-ingress","namespace":"default"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"go-api"}}}],"ports":[{"port":6379,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"redis"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2025-11-28T18:16:29Z"
    generation: 1
    name: allow-redis-ingress
    namespace: default
    resourceVersion: "4840"
    uid: 5100e4f8-c0c6-41f2-a40f-7ef509b9a45b
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: go-api
      ports:
      - port: 6379
        protocol: TCP
    podSelector:
      matchLabels:
        app: redis
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-swag-to-services","namespace":"default"},"spec":{"egress":[{"ports":[{"port":4000,"protocol":"TCP"}],"to":[{"podSelector":{"matchLabels":{"app":"go-api"}}}]},{"ports":[{"port":53,"protocol":"TCP"},{"port":53,"protocol":"UDP"}],"to":[{"namespaceSelector":{}}]},{"ports":[{"port":80,"protocol":"TCP"},{"port":443,"protocol":"TCP"},{"port":53,"protocol":"TCP"},{"port":53,"protocol":"UDP"}]," [...]
    creationTimestamp: "2025-11-28T20:32:23Z"
    generation: 2
    name: allow-swag-to-services
    namespace: default
    resourceVersion: "17404"
    uid: de3e85a5-2c0d-41b4-bcdd-1d0efbc25c76
  spec:
    egress:
    - ports:
      - port: 4000
        protocol: TCP
      to:
      - podSelector:
          matchLabels:
            app: go-api
    - ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
      to:
      - namespaceSelector: {}
    - ports:
      - port: 80
        protocol: TCP
      - port: 443
        protocol: TCP
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
      to:
      - ipBlock:
          cidr: 0.0.0.0/0
    podSelector:
      matchLabels:
        app: swag
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-traefik-egress-global","namespace":"default"},"spec":{"egress":[{"ports":[{"port":80,"protocol":"TCP"},{"port":443,"protocol":"TCP"},{"port":53,"protocol":"TCP"},{"port":53,"protocol":"UDP"}],"to":[{"ipBlock":{"cidr":"0.0.0.0/0"}}]}],"podSelector":{"matchLabels":{"app":"traefik"}},"policyTypes":["Egress"]}}
    creationTimestamp: "2025-11-29T10:40:59Z"
    generation: 1
    name: allow-traefik-egress-global
    namespace: default
    resourceVersion: "83664"
    uid: 213c709a-82a9-459c-ae7d-d3990b3737f8
  spec:
    egress:
    - ports:
      - port: 80
        protocol: TCP
      - port: 443
        protocol: TCP
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
      to:
      - ipBlock:
          cidr: 0.0.0.0/0
    podSelector:
      matchLabels:
        app: traefik
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-traefik-to-go-api","namespace":"default"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"traefik"}}}],"ports":[{"port":4000,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"go-api"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2025-11-29T10:48:21Z"
    generation: 1
    name: allow-traefik-to-go-api
    namespace: default
    resourceVersion: "84496"
    uid: 86e36c56-66e1-4a9b-b3a2-77c8c97f533c
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: traefik
      ports:
      - port: 4000
        protocol: TCP
    podSelector:
      matchLabels:
        app: go-api
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"deny-all-traffic","namespace":"default"},"spec":{"egress":[{"ports":[{"port":53,"protocol":"TCP"},{"port":53,"protocol":"UDP"}],"to":[{"namespaceSelector":{}}]},{"ports":[{"port":80,"protocol":"TCP"},{"port":443,"protocol":"TCP"}],"to":[{"ipBlock":{"cidr":"0.0.0.0/0"}}]}],"podSelector":{},"policyTypes":["Ingress","Egress"]}}
    creationTimestamp: "2025-11-28T18:16:29Z"
    generation: 3
    name: deny-all-traffic
    namespace: default
    resourceVersion: "85149"
    uid: 83d65e57-0b62-4582-8d1b-6cf95f545d94
  spec:
    egress:
    - {}
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-traefik-dns","namespace":"traefik"},"spec":{"egress":[{"ports":[{"port":53,"protocol":"TCP"},{"port":53,"protocol":"UDP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"kube-system"}}}]}],"podSelector":{"matchLabels":{"app":"traefik"}},"policyTypes":["Egress"]}}
    creationTimestamp: "2025-11-29T10:45:54Z"
    generation: 1
    name: allow-traefik-dns
    namespace: traefik
    resourceVersion: "84137"
    uid: 9e3d0360-7545-4e85-bd69-2d2ad70715a1
  spec:
    egress:
    - ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
    podSelector:
      matchLabels:
        app: traefik
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-traefik-egress","namespace":"traefik"},"spec":{"egress":[{"ports":[{"port":80,"protocol":"TCP"},{"port":443,"protocol":"TCP"},{"port":53,"protocol":"TCP"},{"port":53,"protocol":"UDP"}],"to":[{"ipBlock":{"cidr":"0.0.0.0/0"}}]}],"podSelector":{"matchLabels":{"app":"traefik"}},"policyTypes":["Egress"]}}
    creationTimestamp: "2025-11-29T10:39:11Z"
    generation: 1
    name: allow-traefik-egress
    namespace: traefik
    resourceVersion: "83522"
    uid: 7307f6f3-dd99-49a2-b0f4-4a16a35fdbde
  spec:
    egress:
    - ports:
      - port: 80
        protocol: TCP
      - port: 443
        protocol: TCP
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
      to:
      - ipBlock:
          cidr: 0.0.0.0/0
    podSelector:
      matchLabels:
        app: traefik
    policyTypes:
    - Egress
kind: List
metadata:
  resourceVersion: ""
