traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "42"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"traefik"},"name":"traefik","namespace":"traefik"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"traefik"}},"template":{"metadata":{"labels":{"app":"traefik"}},"spec":{"containers":[{"args":["--api.dashboard=true","--api.insecure=true","--providers.kubernetescrd","--entrypoints.web.address=:80","--entrypoints.websecure.address=:443","--certificatesresolvers.letsencrypt.acme.email=martinciro11@ [...]
  creationTimestamp: "2025-12-01T00:32:51Z"
  generation: 42
  labels:
    app: traefik
  name: traefik
  namespace: traefik
  resourceVersion: "648429"
  uid: 89718139-c8f9-400c-8481-d394885f0ed5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: traefik
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-12-04T10:14:55Z"
      creationTimestamp: null
      labels:
        app: traefik
    spec:
      containers:
      - args:
        - --api.dashboard=true
        - --api.insecure=true
        - --providers.kubernetescrd
        - --providers.kubernetesingress
        - --entrypoints.web.address=0.0.0.0:80
        - --entrypoints.web.http2.maxconcurrentstreams=100
        - --entrypoints.websecure.address=0.0.0.0:443
        - --certificatesresolvers.letsencrypt.acme.email=martinciro11@gmail.com
        - --certificatesresolvers.letsencrypt.acme.storage=/data/acme.json
        - --certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web
        env:
        - name: GODEBUG
          value: http2server=0
        image: traefik:v2.10
        imagePullPolicy: IfNotPresent
        name: traefik
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
        - containerPort: 443
          name: websecure
          protocol: TCP
        - containerPort: 8080
          name: admin
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
      dnsPolicy: ClusterFirst
      hostNetwork: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: traefik
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: traefik-data
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-12-01T12:54:41Z"
    lastUpdateTime: "2025-12-01T12:54:41Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-12-04T10:24:56Z"
    lastUpdateTime: "2025-12-04T10:24:56Z"
    message: ReplicaSet "traefik-8547c6755c" has timed out progressing.
    reason: ProgressDeadlineExceeded
    status: "False"
    type: Progressing
  observedGeneration: 42
  readyReplicas: 1
  replicas: 2
  unavailableReplicas: 1
  updatedReplicas: 1
